spring-boot-deployment.yaml
#k8s-app.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-crud-deployment
  namespace: api-demo
spec:
  selector:
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 3
  template:
    metadata:
      labels:
        app: springboot-k8s-mysql
    spec:
      containers:
        - name: springboot-crud-k8s
          image: 'celis227/spring-boot-app:0e0a7e9'
          ports:
            - containerPort: 8081
          env:   # Setting Enviornmental Variables
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://mysql:3306/user_management?allowPublicKeyRetrieval=true&useSSL=false
            - name: SPRING_DATASOURCE_USERNAME
              value: root
            - name: SPRING_DATASOURCE_PASSWORD
              value: rootpassword
